--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,20 @@
+name: CI
+on:
+  push:
+    brances: ["main"]
+  pull_requests:
+    brances: ["main"]
+  workflow_dispatch:
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: install package
+      run: make install
+    - name: lint
+      run: make lint
+    - name: format
+      run: make format
+
 
